--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ button {
 ========================== */
 body {
   font-family: var(--base-font);
+  width: calc(100vw - 20px);
 }
 
 #main-container {
@@ -99,6 +100,7 @@ body {
 @media (max-width: 599.98px) {
   #main-container {
     padding: 0 .6rem 0 .4rem;
+    width: 100vw;
   }
   
   .locked-input-value {
@@ -108,6 +110,7 @@ body {
 
 @media (min-width: 600px) {
   #main-container {
+    width: calc(100vw - 20px);
     padding: 0em 1rem;
   }
   
@@ -117,7 +120,6 @@ body {
 }
 
 #main-container {
-  width: 100vw;
   box-sizing: border-box;
   margin: 0 auto;
   background: #fff;
